--- a/about.html
+++ b/about.html
@@ -59,11 +59,14 @@
               <div class="booster-name">
                 Kyose <span class="booster-rating">★ 5.0</span>
               </div>
-              <div class="booster-roles">
-                <img src="images/icons/top.png" alt="Top" />
-                <img src="images/icons/jungle.png" alt="Jungle" />
+              <div class="booster-job">
+                Booster, Coach <span class="booster-rating"></span>
               </div>
-              <div class="booster-champ">Ahri</div>
+
+              <div class="booster-roles">
+                <img src="images/icons/mid.png" alt="Mid" />
+              </div>
+              <div class="booster-champ">Syndra, Orianna, Ahri</div>
               <img
                 src="images/icons/challenger.png"
                 alt="Rank"
@@ -75,6 +78,44 @@
             <p>
               Kyose is the founder of PayolaPal. He is a 5x Rank 1 with a decade
               of experience, also having played professionally.
+            </p>
+          </div>
+        </div>
+
+        <div class="booster-profile reverse">
+          <div class="booster-card">
+            <div class="booster-image-wrapper">
+              <img
+                src="images/asta.png"
+                alt="Booster Asta"
+                class="booster-pfp"
+              />
+              <span class="booster-status online" title="Online"></span>
+            </div>
+            <div class="booster-info">
+              <div class="booster-name">
+                Asta <span class="booster-rating">★ 5.0</span>
+              </div>
+              <div class="booster-job">
+                Coach <span class="booster-rating"></span>
+              </div>
+
+              <div class="booster-roles">
+                <img src="images/icons/support.png" alt="Support" />
+                <img src="images/icons/bottom.png" alt="ADC" />
+              </div>
+              <div class="booster-champ">Thresh, Rell, Kai'Sa</div>
+              <img
+                src="images/icons/challenger.png"
+                alt="Rank"
+                class="booster-rank"
+              />
+            </div>
+          </div>
+          <div class="booster-description">
+            <p>
+              Asta previously played pro in OCE and has been boosting and
+              coaching for 4+ years.
             </p>
           </div>
         </div>
