--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
       </nav>
     </header>
 
+    <div class="promo-banner">
+      <div class="promo-text">🎉 20% off for first month 🎉</div>
+    </div>
+
     <main class="hero">
       <h1 class="hero-title">Reach Your Dream Rank</h1>
       <p class="hero-subtitle">
@@ -114,7 +118,7 @@
             manipulation — available upon discussion.
           </p>
         </a>
-        <a href="ourboosters.html" class="service-card">
+        <a href="coaching.html" class="service-card">
           <h3>Coaching Sessions</h3>
           <p>
             Learn from top-tier players in structured 1-on-1 sessions. Improve
