--- a/placement.html
+++ b/placement.html
@@ -48,6 +48,9 @@
             >WinTrade/Custom</a
           >
         </li>
+        <li>
+          <a href="coaching.html" class="subnav-link" id="coaching">Coaching</a>
+        </li>
       </ul>
     </nav>
 
@@ -178,6 +181,7 @@
                 alt="Current Rank Icon"
               />
               <span id="current-rank-name">Bronze</span>
+              in
               <span id="current-division">II</span>
             </div>
           </div>
