--- a/rankboost.html
+++ b/rankboost.html
@@ -48,6 +48,9 @@
             >WinTrade/Custom</a
           >
         </li>
+        <li>
+          <a href="coaching.html" class="subnav-link" id="coaching">Coaching</a>
+        </li>
       </ul>
     </nav>
 
