--- a/rankboost.html
+++ b/rankboost.html
@@ -326,7 +326,12 @@
               <p>Price based on your selections</p>
             </div>
 
-            <button type="submit">Proceed to Checkout</button>
+            <button id="proceed-button" type="submit">
+              Proceed to Checkout
+            </button>
+            <div id="price-warning" class="warning-box" style="display: none">
+              Current rank must be lower than desired rank.
+            </div>
           </form>
         </div>
       </div>
