--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
                 Asta <span class="booster-rating">★ 5.0</span>
               </div>
               <div class="booster-job">
-                Coach <span class="booster-rating"></span>
+                Booster <span class="booster-rating"></span>
               </div>
 
               <div class="booster-roles">
