--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
 
     <div class="promo-banner">
-      <div class="promo-text">🎉 20% off for first month 🎉</div>
+      <div class="promo-text">SITE LAUNCH PROMOTION</div>
     </div>
 
     <main class="hero">
