--- a/reviews.html
+++ b/reviews.html
@@ -44,7 +44,7 @@
             class="fern fern-right"
             alt="Fern Right"
           />
-          <div class="rank-label">Silver IV ➔ Gold IV</div>
+          <div class="rank-label">Diamond IV ➔ Master</div>
         </div>
 
         <div class="review-card">
@@ -78,7 +78,7 @@
             class="fern fern-right"
             alt="Fern Right"
           />
-          <div class="rank-label">Bronze II ➔ Silver IV</div>
+          <div class="rank-label">Plat II ➔ Emerald III</div>
         </div>
 
         <div class="review-card">
@@ -112,7 +112,7 @@
             class="fern fern-right"
             alt="Fern Right"
           />
-          <div class="rank-label">Iron I ➔ Bronze IV</div>
+          <div class="rank-label">Iron I ➔ Plat IV</div>
         </div>
       </div>
     </main>
