--- a/placement.html
+++ b/placement.html
@@ -262,7 +262,38 @@
             >
               Coupon applied successfully!
             </p>
+            
 
+            <div style="margin-top: 1rem">
+              <label
+              for="discord"
+              style="
+                display: block;
+                margin-top: 15px;
+                font-family: 'Poppins', sans-serif;
+                font-size: 1rem;
+                color: #fff;
+              "
+              >What is your Discord username?</label
+            >
+            <input
+              type="text"
+              id="discord"
+              name="discord"
+              placeholder="user#1234"
+              required
+              style="
+                display: block;
+                width: 100%;
+                padding: 10px;
+                margin-top: 6px;
+                background-color: #1c1c1c;
+                font-family: 'Poppins', sans-serif;
+                color: #fff;
+                border: 1px solid #555;
+                border-radius: 6px;
+              "
+            />
             <div class="pricing-card">
               <div id="final-price">
                 <span class="original-price" style="display: none"></span>
